[gd_scene load_steps=22 format=3 uid="uid://bc3k7dij4dkyd"]

[ext_resource type="Script" path="res://characters/npcs/supervisor/supervisor_man.gd" id="1_l0wv1"]
[ext_resource type="Texture2D" uid="uid://bboy0qe34n6f3" path="res://assets/1_assets_from_others/characters/sup_1.png" id="2_2mxav"]
[ext_resource type="Script" path="res://scripts/RapidVector_StateMachine/node_state_machine.gd" id="2_ctrtj"]
[ext_resource type="Script" path="res://characters/npcs/supervisor/idle_state.gd" id="3_c6syh"]
[ext_resource type="Script" path="res://characters/npcs/supervisor/distracted_state.gd" id="4_q46r7"]
[ext_resource type="Script" path="res://characters/npcs/supervisor/walk_state.gd" id="5_jm3ga"]
[ext_resource type="Script" path="res://characters/npcs/supervisor/run_state.gd" id="7_cjfey"]
[ext_resource type="Texture2D" uid="uid://bf76qwq2m7q5" path="res://assets/1_assets_from_others/moderninteriors-win/UI_16x16.png" id="8_mcsbk"]

[sub_resource type="Animation" id="Animation_7ggap"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seekingArea/seeking_zone:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("seekingArea/seeking_zone:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -18)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("seekingArea/seeking_zone:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("seekingArea/seeking_zone:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_64m48"]
resource_name = "distracted"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 1.4, 1.7, 2.3, 2.56667, 2.7, 2.8, 2.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [336, 337, 338, 339, 340, 343, 342, 343, 344, 345, 346, 347, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seekingArea/seeking_zone:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 2.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("seekingArea/seeking_zone:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 2.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_wkwb7"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [74, 75, 76, 77, 78, 79, 74]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seekingArea/seeking_zone:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -18)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("seekingArea/seeking_zone:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("seekingArea/seeking_zone:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("seekingArea/seeking_zone:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0sj4d"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 113, 114, 115, 116, 117]
}

[sub_resource type="Animation" id="Animation_a7mc8"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [117, 112, 114, 115]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ld5oi"]
_data = {
"RESET": SubResource("Animation_7ggap"),
"distracted": SubResource("Animation_64m48"),
"idle": SubResource("Animation_wkwb7"),
"run": SubResource("Animation_0sj4d"),
"walk": SubResource("Animation_a7mc8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7erqd"]
radius = 3.0
height = 7.99999

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cm4h"]
size = Vector2(13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3klgd"]
atlas = ExtResource("8_mcsbk")
region = Rect2(192, 136, 16, 16)

[sub_resource type="Animation" id="Animation_0dnxf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("emotionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("emotionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("emotionSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yebj0"]
resource_name = "bounce"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("emotionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, -28), Vector2(8, -31), Vector2(8, -28), Vector2(8, -31), Vector2(8, -28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("emotionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("emotionSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_x4bsh"]
resource_name = "bounce_loop"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("emotionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, -28), Vector2(8, -31), Vector2(8, -28), Vector2(8, -31), Vector2(8, -28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("emotionSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("emotionSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bh4fe"]
_data = {
"RESET": SubResource("Animation_0dnxf"),
"bounce": SubResource("Animation_yebj0"),
"bounce_loop": SubResource("Animation_x4bsh")
}

[node name="SupervisorMan" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 17
script = ExtResource("1_l0wv1")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_2mxav")
offset = Vector2(0, -16)
hframes = 56
vframes = 20
frame = 42

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ld5oi")
}

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
position = Vector2(0, -3)
radius = 4.0
affect_navigation_mesh = true
avoidance_layers = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7erqd")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
simplify_path = true
avoidance_layers = 3
avoidance_mask = 3

[node name="NodeStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("2_ctrtj")
initial_node_state = NodePath("idle")

[node name="idle" type="Node" parent="NodeStateMachine" node_paths=PackedStringArray("character", "animation_player")]
script = ExtResource("3_c6syh")
character = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="distracted" type="Node" parent="NodeStateMachine" node_paths=PackedStringArray("character", "animation_player")]
script = ExtResource("4_q46r7")
character = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="walk" type="Node" parent="NodeStateMachine" node_paths=PackedStringArray("character", "animation_player", "navigation_agent")]
script = ExtResource("5_jm3ga")
character = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
navigation_agent = NodePath("../../NavigationAgent2D")

[node name="run" type="Node" parent="NodeStateMachine" node_paths=PackedStringArray("character", "animation_player", "navigation_agent")]
script = ExtResource("7_cjfey")
character = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
navigation_agent = NodePath("../../NavigationAgent2D")

[node name="distractionTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="seekingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="seekingArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="seeking_zone" type="CollisionPolygon2D" parent="seekingArea"]
position = Vector2(0, -18)
polygon = PackedVector2Array(0, 11, -30, 61, 0, 74, 32, 62)

[node name="Polygon2D" type="Polygon2D" parent="seekingArea/seeking_zone"]
z_index = 2
z_as_relative = false
color = Color(0.965644, 0.585302, 0.677413, 0.486275)
polygon = PackedVector2Array(-30, 61, 0, 74, 32, 62, 0, 11)

[node name="seeking_zone_left" type="CollisionPolygon2D" parent="seekingArea"]
visible = false
position = Vector2(9, -9)
rotation = 1.5708
polygon = PackedVector2Array(0, 11, -30, 61, 0, 74, 32, 62)
disabled = true

[node name="Polygon2D2" type="Polygon2D" parent="seekingArea/seeking_zone_left"]
z_index = 2
z_as_relative = false
color = Color(0.965644, 0.585302, 0.677413, 0.486275)
polygon = PackedVector2Array(-30, 61, 0, 74, 32, 62, 0, 11)

[node name="seeking_zone_right" type="CollisionPolygon2D" parent="seekingArea"]
visible = false
position = Vector2(-9, -9)
rotation = -1.5708
polygon = PackedVector2Array(0, 11, -30, 61, 0, 74, 32, 62)
disabled = true

[node name="Polygon2D3" type="Polygon2D" parent="seekingArea/seeking_zone_right"]
z_index = 2
z_as_relative = false
color = Color(0.965644, 0.585302, 0.677413, 0.486275)
polygon = PackedVector2Array(-30, 61, 0, 74, 32, 62, 0, 11)

[node name="captureArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="captureArea"]
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_5cm4h")
debug_color = Color(0.810805, 0.236536, 0.830089, 0.42)

[node name="emotionSprite" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(8, -28)
texture = SubResource("AtlasTexture_3klgd")

[node name="emotionAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bh4fe")
}

[connection signal="timeout" from="distractionTimer" to="NodeStateMachine/idle" method="_on_distraction_timer_timeout"]
[connection signal="timeout" from="seekingTimer" to="." method="_on_seeking_timer_timeout"]
[connection signal="body_entered" from="seekingArea" to="." method="_on_seeking_area_body_entered"]
[connection signal="body_exited" from="seekingArea" to="." method="_on_seeking_area_body_exited"]
[connection signal="area_entered" from="captureArea" to="." method="_on_capture_area_area_entered"]
[connection signal="area_exited" from="captureArea" to="." method="_on_capture_area_area_exited"]
